[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/player_idle.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://sprites/player_walking_right.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0
height = 2.0

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "walking_right",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 0.5
} ]

[node name="player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource( 2 )

[node name="playerCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 1 )

[node name="playerAnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -7 )
frames = SubResource( 2 )
animation = "idle"
frame = 3
playing = true

[node name="playerVisibilityNotifier" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -7 )
scale = Vector2( 0.7, 0.7 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 320
limit_bottom = 180
smoothing_enabled = true
editor_draw_limits = true

[node name="coyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="screen_exited" from="playerVisibilityNotifier" to="." method="_on_playerVisibilityNotifier_screen_exited"]
